@@ -13,15 +13,14 @@ import java.io.File;
 import java.io.IOException;
 import java.time.LocalDateTime;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Set;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
-import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static uk.gov.hmcts.reform.orgrolemapping.helper.AssignmentRequestBuilder.ROLE_NAME_STCW;
 import static uk.gov.hmcts.reform.orgrolemapping.helper.AssignmentRequestBuilder.ROLE_NAME_TCW;
 
@@ -113,7 +112,7 @@ class AssignmentRequestBuilderTest {
     @Test
     void validateIACAuthorisation()  {
 
-        assertTrue(AssignmentRequestBuilder.validateAuthorisation(Arrays.asList(Authorisation.builder()
+        assertTrue(AssignmentRequestBuilder.validateAuthorisation(List.of(Authorisation.builder()
                 .serviceCode("BFA1")
                 .endDate(LocalDateTime.now().plusDays(1)).build())));
     }
@@ -135,9 +134,26 @@ class AssignmentRequestBuilderTest {
     @Test
     void validateNonIACAuthorisation()  {
 
-        assertFalse(AssignmentRequestBuilder.validateAuthorisation(Arrays.asList(Authorisation.builder()
+        assertFalse(AssignmentRequestBuilder.validateAuthorisation(List.of(Authorisation.builder()
                 .serviceCode("BFA2")
                 .endDate(LocalDateTime.now().plusDays(1)).build())));
+    }
+
+
+    @Test
+    void validateAuthorisation_inValidEndDate() {
+        Authorisation authorisation = Authorisation.builder()
+                .endDate(LocalDateTime.now().minusDays(2))
+                .serviceCode("BFA2")
+                .build();
+        boolean isValidAuthorisation = AssignmentRequestBuilder.validateAuthorisation(List.of(authorisation));
+        assertFalse(isValidAuthorisation);
+    }
+
+    @Test
+    void validateAuthorisation_emptyList() {
+        boolean authorisation = AssignmentRequestBuilder.validateAuthorisation(List.of());
+        assertFalse(authorisation);
     }
 
     @Test
@@ -154,16 +170,42 @@ class AssignmentRequestBuilderTest {
                 .convertProfileToJudicialAccessProfile(judicialProfile);
 
         judicialAccessProfiles.forEach(appointment -> {
-                assertNotNull(appointment.getUserId());
-                assertNotNull(appointment.getBeginTime());
-                assertNotNull(appointment.getEndTime());
-                assertNotNull(appointment.getRegionId());
-                assertNotNull(appointment.getBaseLocationId());
-                assertNotNull(appointment.getTicketCodes());
-                assertEquals(1, appointment.getTicketCodes().size());
-                assertNotNull(appointment.getAppointment());
-            }
-        );
+            assertNotNull(appointment.getUserId());
+            assertNotNull(appointment.getBeginTime());
+            assertNotNull(appointment.getEndTime());
+            assertNotNull(appointment.getRegionId());
+            assertNotNull(appointment.getBaseLocationId());
+            assertNotNull(appointment.getTicketCodes());
+            assertEquals(1, appointment.getTicketCodes().size());
+            assertNotNull(appointment.getAppointment());
+        });
+        assertEquals(2, judicialAccessProfiles.size());
+    }
+
+    @Test
+    void convertUserProfileToJudicialAccessProfileWithDiffTicketCode() throws IOException {
+        ObjectMapper objectMapper = new ObjectMapper();
+        objectMapper.registerModule(new JavaTimeModule());
+        JudicialProfile judicialProfile =
+                objectMapper.readValue(new File("src/main/resources/judicialProfileSample.json"),
+                        JudicialProfile.class);
+        judicialProfile.getAppointments().get(0).setAppointment("1");
+        judicialProfile.getAppointments().get(0).setEndDate(null);
+        judicialProfile.getAppointments().get(0).setIsPrincipalAppointment("False");
+        judicialProfile.getAppointments().get(1).setAppointment("2");
+        judicialProfile.setAuthorisations(List.of(Authorisation.builder().ticketCode("374").build()));
+        Set<JudicialAccessProfile> judicialAccessProfiles = AssignmentRequestBuilder
+                .convertProfileToJudicialAccessProfile(judicialProfile);
+
+        judicialAccessProfiles.forEach(appointment -> {
+            assertNotNull(appointment.getUserId());
+            assertNotNull(appointment.getBeginTime());
+            assertNotNull(appointment.getRegionId());
+            assertNotNull(appointment.getBaseLocationId());
+            assertNotNull(appointment.getTicketCodes());
+            assertEquals(2, appointment.getTicketCodes().size());
+            assertNotNull(appointment.getAppointment());
+        });
         assertEquals(2, judicialAccessProfiles.size());
     }
 }
